; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/i1480/i1480u-wlp/extr_netdev.c_i1480u_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/i1480/i1480u-wlp/extr_netdev.c_i1480u_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.i1480u = type { i32, %struct.wlp }
%struct.wlp = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i1480u_stop(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.i1480u*, align 8
  %4 = alloca %struct.wlp*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.i1480u* @netdev_priv(%struct.net_device* %5)
  store %struct.i1480u* %6, %struct.i1480u** %3, align 8
  %7 = load %struct.i1480u*, %struct.i1480u** %3, align 8
  %8 = getelementptr inbounds %struct.i1480u, %struct.i1480u* %7, i32 0, i32 1
  store %struct.wlp* %8, %struct.wlp** %4, align 8
  %9 = load %struct.wlp*, %struct.wlp** %4, align 8
  %10 = getelementptr inbounds %struct.wlp, %struct.wlp* %9, i32 0, i32 2
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @BUG_ON(i32 %13)
  %15 = load %struct.wlp*, %struct.wlp** %4, align 8
  %16 = getelementptr inbounds %struct.wlp, %struct.wlp* %15, i32 0, i32 1
  %17 = call i32 @wlp_wss_remove(i32* %16)
  %18 = load %struct.net_device*, %struct.net_device** %2, align 8
  %19 = call i32 @netif_carrier_off(%struct.net_device* %18)
  %20 = load %struct.net_device*, %struct.net_device** %2, align 8
  %21 = call i32 @netif_stop_queue(%struct.net_device* %20)
  %22 = load %struct.wlp*, %struct.wlp** %4, align 8
  %23 = getelementptr inbounds %struct.wlp, %struct.wlp* %22, i32 0, i32 0
  %24 = call i32 @uwb_radio_stop(i32* %23)
  %25 = load %struct.i1480u*, %struct.i1480u** %3, align 8
  %26 = call i32 @i1480u_rx_release(%struct.i1480u* %25)
  %27 = load %struct.i1480u*, %struct.i1480u** %3, align 8
  %28 = call i32 @i1480u_tx_release(%struct.i1480u* %27)
  ret i32 0
}

declare dso_local %struct.i1480u* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @wlp_wss_remove(i32*) #1

declare dso_local i32 @netif_carrier_off(%struct.net_device*) #1

declare dso_local i32 @netif_stop_queue(%struct.net_device*) #1

declare dso_local i32 @uwb_radio_stop(i32*) #1

declare dso_local i32 @i1480u_rx_release(%struct.i1480u*) #1

declare dso_local i32 @i1480u_tx_release(%struct.i1480u*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
